<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:paddingVertical="@dimen/_18sdp"
    tools:context=".Fragment.navigationfragment.profile.SettingsFragment">

 <androidx.appcompat.widget.LinearLayoutCompat
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >

     <TextView
         android:id="@+id/backBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Settings"
         android:drawableStart="@drawable/baseline_arrow_back_24"
         android:drawablePadding="@dimen/_18sdp"
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:fontFamily="@font/osc_medium"
         android:textSize="@dimen/_18sdp"

         />


     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_place"
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:fontFamily="@font/osc_medium"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="24dp"

         />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray1"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="already_added places"
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:fontFamily="@font/osc_medium"
         android:layout_marginVertical="8dp"

         />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray1"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/edit_profile"
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:fontFamily="@font/osc_medium"
         android:layout_marginVertical="8dp"

         />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray1"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/notification_settings"
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:fontFamily="@font/osc_medium"
         android:layout_marginVertical="8dp"

         />
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray1"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/acc_settings"
         android:gravity="center_vertical"
         android:textColor="@color/black"
         android:fontFamily="@font/osc_medium"
         android:layout_marginVertical="8dp"

         />

     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray1"/>


 </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>