<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Fragment.login.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:onClick="onClickBack"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_arrow_back_24" />
        <TextView
            android:id="@+id/tv_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/metrophobic_regular"
            android:text="OTP Verfication"
            android:textColor="@color/black"

            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/metrophobic_regular"
            android:text="We have sent a verfication code to"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/metrophobic_regular"
            android:text="+91-4353367474"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="5dp"
            android:textColor="@color/black"
            app:bar_height="2dp"
            app:box_margin="15dp"
            app:height="62dp"
            app:length="4"
            app:otp_box_background_active="@drawable/bg_active_otp"
            app:otp_box_background_inactive="@drawable/bg_otp_verify"
            app:otp_text_size="24dp"
            app:width="50dp"
            android:focusable="true"
            tools:ignore="MissingClass" />


        <TextView
            android:id="@+id/tv_resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/metrophobic_regular"
            android:onClick="onClickResendCode"
            android:text="@string/resentotp"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/light_red"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp">

            <TextView
                android:id="@+id/tv_verify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_red"
                android:elevation="2dp"
                android:fontFamily="@font/metrophobic_regular"
                android:gravity="center"

                android:text="@string/verify_account"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>






</FrameLayout>